# automate_everything

./: app.py  passenger_wsgi.py  pyproject.toml
.github/workflows/: automate_everything_smallhost.yml
automate_everything/: __init__.py  routes.py
