[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["automate_everything*"]

[project]
name = "autoamte_everything"
version = "0.0.1"
authors = [
  { name="Kamil" },
]
description = "I am another automation project...but bigger"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'flask'
]

[project.urls]
"Homepage" = "https://github.com/kami2/automate_everything"
